Some gwsetup .htm cleanup.
- Remove gwc2 related stuff
- Warnings of clenaup in comm.log (rather than comm.log2)
- Put comm.log content at bottom

--- a/bin/distrib/setup/lang/bso_ok.htm
+++ b/bin/distrib/setup/lang/bso_ok.htm
@@ -38,7 +38,6 @@ sv: Databasen skapad
 </div>
 
 <p>
-
 [
 de: Die Operation ist beendet. Deine Datenbank namens "%o" wurde angelegt.
 en: The operation is terminated: Your database named “%o” is created.
@@ -52,24 +51,14 @@ lv: Darîts. Datu bâzes izveidoðana ir pabeigta. Jûsu datu bâze "%o" ir
     izveidota.
 sv: Operationen är avklarad. Din databas benämnd "%o" är skapad.
 ]
-
-[
-en: See alert messages in file <a href="gwsetup?lang=%l;v=bso_comm.htm;anon=%a">%S</a>.
-fr: Voir les messages d’alerte dans le fichier <a href="gwsetup?lang=%l;v=bso_comm.htm;anon=%a">%S</a>.
-]
-
-</p>
 <p>
-
 [
 en: Use gwsetup to <a href="gwf?lang=%l;&anon=%o">partially configure the
     database parameters</a> (<samp>%o.gwb%/etc%/config.txt</samp>)
 fr: Utiliser gwsetup pour <a href="gwf?lang=%l;&anon=%o">configure les
     paramètres de la base de donnée</a> (<samp>%o.gwb%/etc%/config.txt</samp>)
 ]
-</p>
 <p>
-
 [
 de: Um mit der Datenbank zu arbeiten und Änderungen daran vornehmen zu
     können, muß der <a
@@ -92,10 +81,7 @@ lv: Lai darbotos ar Jûsu datubâzi, jâpalaiþ <a
 sv: För att konsultera din databas och möjligen modifiera den, måste <a
     href="gwsetup?lang=%l;v=gwd_info.htm">gwd servicen</a> startas.
 ]
-
-</p>
 <p>
-
 [
 de: Sofern dies der Fall ist, probiere die unten angegebene Adresse aus. Die
     angezeigte Seite ist die "Willkommensseite" deiner Datenbank. Setze ein
@@ -121,16 +107,11 @@ sv: Om den är det, försök med adressen nedan. Den visade sidan kallas
     "välkomstsidan" för din databas. Lägg till den till dina
     Favoriter/Bokmärken.
 ]
-
-</p>
 <p>
   <ul>
     <li><a href="http://%m:%P/%o">http://%m:%P/%o</a></li>
   </ul>
-</p>
-
 <p>
-
 [
 de: Zurück zum <a href="gwsetup?lang=%l;v=welcome.htm">Hauptmenü</a>.
 en: You can also return to the <a href="gwsetup?lang=%l;v=welcome.htm">main
@@ -147,5 +128,21 @@ lv: Jûs variet arî atgriezties <a
 sv: Du kan också återvända till <a
     href="gwsetup?lang=%l;v=welcome.htm">huvudmenyn</a>.
 ]
-
-</p>
+<p>
+[
+en: Alert messages in file <a href="gwsetup?lang=%l;v=bso_comm.htm;anon=%a">%S</a>.
+fr: Messages d’alerte dans le fichier <a href="gwsetup?lang=%l;v=bso_comm.htm;anon=%a">%S</a>.
+]
+<pre>
+%g{- [
+de: empty file
+en: empty file
+es: fichero vacio
+fi: tyhjä tiedosto
+fr: fichier vide
+it: file vuoto
+lv: datne ir tukða
+sv: tom fil
+lv: datne ir tukða
+] -}
+</pre>
