--- a/bin/distrib/setup/lang/clean_ok.htm
+++ b/bin/distrib/setup/lang/clean_ok.htm
@@ -36,9 +36,7 @@ sv: Operationen klar
 ]
 </h1>
 </div>
-
-<p />
-
+<p>
 [
 de: Deine Datenbank "%a" wurde erfolgreich aufgeräumt.
 en: So. The cleaning up of you database "%a" is completed.
@@ -49,9 +47,7 @@ it: La pulizia della base "%a" è stata portata a termine.
 lv: Darîts. Jûsu datu bâzes "%a" sakopðana ir pabeigta.
 sv: Upprensningen av din databas "%a" är klar.
 ]
-
-<p />
-
+<p>
 [
 de: Die Datenbank wurde erfolgreich neu erzeugt: Die alte Version
     steht im Unterverzeichnis "old" im Verzeichnis "%w".
@@ -80,9 +76,7 @@ sv: Din databas har blivit helt återskapad, den gamla versionen finns i
     underkatalogen "old" i katalogen "%w".
     Du kan återskapa den om det blir något problem.
 ]
-
-<p />
-
+<p>
 [
 de: Du kannst nun mit deiner superaufgeräumten neuen Datenbank
     arbeiten…
@@ -95,12 +89,9 @@ lv: Jûs variet griezties pie Jûsu atjauninâtâs datu bâzes…
 sv: Du kan nu konsultera din nya rena databas…
 ]
 
-<p />
-
+<p>
 <ul><li><a href="http://%m:%P/%a">http://%m:%P/%a</a></ul>
-
-<p /><br />
-
+<p>
 … [
 de: oder zurück zum
     <a href="gwsetup?lang=%l;v=welcome.htm">Hauptmenü</a> springen.
@@ -114,3 +105,23 @@ lv: vai atgriezties <a href="gwsetup?lang=%l;v=welcome.htm">galvenajâ
     izvçlnç</a>.
 sv: eller återvända till <a href="gwsetup?lang=%l;v=welcome.htm">huvudmenyn</a>.
 ]
+<p>
+[
+en: Alert messages in file <a href="gwsetup?lang=%l;v=bso_comm.htm;anon=%a">%S</a>.
+fr: Messages d’alerte dans le fichier <a href="gwsetup?lang=%l;v=bso_comm.htm;anon=%a">%S</a>.
+]
+<pre>
+%g{- [
+de: empty file
+en: empty file
+es: fichero vacio
+fi: tyhjä tiedosto
+fr: fichier vide
+it: file vuoto
+lv: datne ir tukða
+sv: tom fil
+lv: datne ir tukða
+] -}
+</pre>
+<p>
+
