Added is Sys.file_exists at head of rm_rf. Switched to Sys.is_directory

--- a/bin/distrib/setup/lang/err_gwc.htm
+++ b/bin/distrib/setup/lang/err_gwc.htm
@@ -18,9 +18,9 @@
 </div>
 [
 en: The base "%a" exits. Set -action to backup or update.<br>
-    Use the "back" key of your browser to return to the options selection,
-fr: La base "%a" existe déjà. Choisir backup ou update pour l'oprion -action.<br>
-    Utilisez la touche "back" de votre navigateur pour revenir au choix des options,
+    Use the "back" key of your browser to return to the options selection.
+fr: La base "%a" existe déjà. Choisir backup ou update pour l'option -action.<br>
+    Utilisez la touche "back" de votre navigateur pour revenir au choix des options.
 ]
 <p>
 [
