Tried a recursive rm_rf. Identified the wiznotes issue. Verbose mode in gwc

--- a/bin/distrib/setup/lang/err_gwc_1.htm
+++ b/bin/distrib/setup/lang/err_gwc_1.htm
@@ -13,17 +13,14 @@
 
 <body %Vbody_prop;>
 
-<div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
+<div style="background:url('images/gwlogo.png') no-repeat left top;
+  text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;"><font color=red>[error]</font></h1>
 </div>
 
 [
-en: The base has been created, but the copy of
-    documents/etc/history/forum encountered a problem.
-    You should inspect those folders.
-fr: La création de la base a eu lieu, mais la recopie des dossiers
-    documents/etc/history/forum a échoué.
-    Vous devriez inspecter ces dossiers
+en: The base has not been created.
+fr: La création de la base n'a pas eu lieu.
 ]
 <p>
 [
