--- a/bin/distrib/setup/lang/gwc.htm
+++ b/bin/distrib/setup/lang/gwc.htm
@@ -258,6 +258,16 @@ fr: Pas d'option.<br>
 </tr>
 </table>
 <p>
+<table class="setup">
+<tr align=left>
+<td><input type=checkbox id=v name=v>   </td>
+<td><label for=v>[
+en: Verbose.
+fr: Verbose.
+]</label></td>
+</tr>
+</table>
+<p>
 <li>
 [
 de: Dann drücke „OK”.
