Cleanup gwsetup. Fix connex -del. Homogeneize comm_log

--- a/bin/distrib/setup/lang/bso_comm_log.htm
+++ b/bin/distrib/setup/lang/bso_comm_log.htm
@@ -8,13 +8,8 @@
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
   <title>[
-de: Inhalt der Datei "comm.log"
-en: Content of comm.log
-es: Contenido del fichero "comm.log"
-fi: Tiedoston "comm.log" sisältö
-fr: Contenu du fichier comm.log
-it: Contenuto del file "comm.log"
-sv: Innehållet i filen "comm.log"
+en: Content of log file
+fr: Contenu du fichier log
 ]</title>
 %fsetup.css;
 </head>
@@ -25,13 +20,8 @@ sv: Innehållet i filen "comm.log"
   text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
 [
-de: Inhalt der Datei "comm.log"
-en: Content of comm.log
-es: Contenido del fichero "comm.log"
-fi: Tiedoston "comm.log" sisältö
-fr: Contenu du fichier comm.log
-it: Contenuto del file "comm.log"
-sv: Innehållet i filen "comm.log"
+en: Content of log file
+fr: Contenu du fichier log
 ]
 </h1>
 </div>
