--- a/bin/distrib/setup/lang/ok_clean.htm
+++ b/bin/distrib/setup/lang/ok_clean.htm
@@ -108,9 +108,9 @@ sv: eller återvända till <a href="gwsetup?lang=%l;v=welcome.htm">huvudmenyn</a
 <p>
 [
 en: Alert messages in file
-    <a href="gwsetup?lang=%l;v=bso_comm_log.htm;anon=%a;which=clean">%S</a>.
+    <a href="gwsetup?lang=%l;v=bso_comm_log.htm;anon=%a;which=gwc">%S</a>.
 fr: Messages d’alerte dans le fichier
-    <a href="gwsetup?lang=%l;v=bso_comm_log.htm;anon=%a;which=clean">%S</a>.
+    <a href="gwsetup?lang=%l;v=bso_comm_log.htm;anon=%a;which=gwc">%S</a>.
 ]
 <p>
 [
