--- a/bin/distrib/setup/lang/merge_1.htm
+++ b/bin/distrib/setup/lang/merge_1.htm
@@ -149,5 +149,6 @@ sv: Denna operation motsvarar de följande kommandona:
 
 <pre>
      $ cd "%w"
-%s{     $ %x%/gwu %a -o %a.gw|}     $ %x%/gwc %s{-sep %a.gw |}\-f -o %o
+%s{     $ %x%/gwu %a -o %a.gw|}
+     $ %x%/gwc %s{-sep %a.gw |}\-f -o %o > %S
 </pre>
