--- a/bin/distrib/setup/lang/ok_merge.htm
+++ b/bin/distrib/setup/lang/ok_merge.htm
@@ -131,9 +131,9 @@ sv: Du kan också återvända till <a
 <p>
 [
 en: Alert messages in file
-    <a href="gwsetup?lang=%l;v=bso_comm_log.htm;anon=%a">%S</a>.
+    <a href="gwsetup?lang=%l;v=bso_comm_log.htm;anon=%a;which=gwc">%S</a>.
 fr: Messages d’alerte dans le fichier
-    <a href="gwsetup?lang=%l;v=bso_comm_log.htm;anon=%a">%S</a>.
+    <a href="gwsetup?lang=%l;v=bso_comm_log.htm;anon=%a;which=gwc">%S</a>.
 ]
 <p>
 [
