add gwfixbase to gwsetup

--- a/bin/setup/lang/welcome.htm
+++ b/bin/setup/lang/welcome.htm
@@ -287,6 +287,11 @@ en: <a href="gwsetup?lang=%l;v=gwdiff.htm">Compute the difference between two ba
 fr: <a href="gwsetup?lang=%l;v=gwdiff.htm">Calcule la différence entre deux bases</a>
 ] (gwdiff)
 
+<li>[
+en: <a href="gwsetup?lang=%l;v=gwfix.htm">Fixes problems in a base</a>
+fr: <a href="gwsetup?lang=%l;v=gwfix.htm">Corrige les problèmes d'une base</a>
+] (gwfixbase)
+
 
 </ul>
 </div>
