Missing quotes for html attributes in setup/lang/*.htm files

--- a/bin/setup/lang/connex.htm
+++ b/bin/setup/lang/connex.htm
@@ -26,7 +26,7 @@ fr: Liste des composantes connexes
 <ul>
 <li>
 <form method="get" action="connex">
-<input type=hidden name=opt value=check>
+<input type="hidden" name="opt" value="check">
 <input type="hidden" name="lang" value="%l">
 <input type="hidden" name="server" value="%m">
 <input type="hidden" name="gwd_p" value="%P">
