--- a/bin/setup/lang/ged2gwb.htm
+++ b/bin/setup/lang/ged2gwb.htm
@@ -40,8 +40,8 @@ sv: Importera en GEDCOM-fil
 <p><p>
 
 <form method=GET action="ged2gwb">
-<input type=hidden name=opt value=check>
-<input type=hidden name=lang value=%l>
+<input type=hidden name=opt value="check">
+<input type=hidden name=lang value="%l">
 
 <p>
 <ul><li>
