--- a/bin/setup/lang/gwc.htm
+++ b/bin/setup/lang/gwc.htm
@@ -152,7 +152,7 @@ sv: Välj de optioner du vill ha:
 <p>
 <table class="setup">
 <tr align=left>
-<td><input type=checkbox name=stats value=on>   </td>
+<td><input type=checkbox name=stats value="on">   </td>
 <td>[
 de: Statistiken nach Abschluß der
     Operation ausgeben (sind dann in der Trace-Ausgabe sichtbar).
@@ -172,7 +172,7 @@ sv: Visa statistik på slutet (den kommer att synas i utskriften).
 <p>
 <table class="setup">
 <tr align=left>
-<td><input type=checkbox name=nc value=on>   </td>
+<td><input type=checkbox name=nc value="on">   </td>
 <td>[
 de: Datenkonsistenz nicht überprüfen.
 en: Do not check the consistency of the data.
@@ -186,7 +186,7 @@ sv: Kontrollera inte att databasens data är OK.
 <p>
 <table class="setup">
 <tr align=left>
-<td><input type=checkbox name=cg value=on>   </td>
+<td><input type=checkbox name=cg value="on">   </td>
 <td>[
 de: Initialisierung der Blutsverwandtschaften auch durchführen.
 en: End by the initialization of consanguinities.
@@ -201,7 +201,7 @@ sv: Avsluta med att beräkna blodsbanden.
 <p>
 <table class="setup">
 <tr align=left>
-<td><input type=checkbox name=f value=on>   </td>
+<td><input type=checkbox name=f value="on">   </td>
 <td>[
 en: Delete database if already existing.
 fr: Détruire la base pré-existante.
