--- a/bin/setup/lang/gwd.htm
+++ b/bin/setup/lang/gwd.htm
@@ -38,7 +38,7 @@ sv: Parametrar för "gwd"
 <p><p>
 
 <form method=POST action="gwd_1">
-<input type=hidden name=lang value=%l>
+<input type=hidden name=lang value="%l">
 <input type=hidden name=setup_link value="">
 
 <p>
