--- a/bin/setup/lang/gwdiff.htm
+++ b/bin/setup/lang/gwdiff.htm
@@ -26,8 +26,8 @@ fr: Détection des différences entre deux bases
 </div>
 
 <form method=GET action="gwdiff">
-<input type=hidden name=opt value=check>
-<input type=hidden name=lang value=%l>
+<input type=hidden name=opt value="check">
+<input type=hidden name=lang value="%l">
 
 <table>
 <tr>
@@ -171,7 +171,7 @@ sv: Välj de optioner du vill ha:
 <p>
 <dl><dt><dd><table class="setup">
 <tr align=left>
-<td><input type=checkbox name=ad value=on>-ad &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+<td><input type=checkbox name=ad value="on">-ad &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td>[
 en: Checks descendants of all ascendants .
 fr: Vérifier tous les descendants des ascendants.
@@ -181,7 +181,7 @@ fr: Vérifier tous les descendants des ascendants.
 
 <dl><dt><dd><table class="setup">
 <tr align=left>
-<td><input type=checkbox name=d value=on>-d &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+<td><input type=checkbox name=d value="on">-d &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td>[
 en: Checks descendants (default).
 fr: Vérifier les descendants (par défaut).
@@ -191,7 +191,7 @@ fr: Vérifier les descendants (par défaut).
 
 <dl><dt><dd><table class="setup">
 <tr align=left>
-<td><input type=checkbox name=mem value=on>-mem &nbsp;</td>
+<td><input type=checkbox name=mem value="on">-mem &nbsp;</td>
 <td>[
 de: Während der Operation sparsam mit dem Speicher umgehen
     (ist aber langsamer).
