--- a/bin/setup/lang/gwf.htm
+++ b/bin/setup/lang/gwf.htm
@@ -38,7 +38,7 @@ sv: Parametrar
 <p><p>
 
 <form method=GET action="gwf">
-<input type=hidden name=lang value=%l>
+<input type=hidden name=lang value="%l">
 <ul><li>
 [
 de: Bitte wähle deine Datenbank mit dem zugehörigen Schalter:
