--- a/bin/setup/lang/gwf_1.htm
+++ b/bin/setup/lang/gwf_1.htm
@@ -38,8 +38,8 @@ sv: Parametrar "%a"
 <p><p>
 
 <form method=POST action="gwf_1">
-<input type=hidden name=lang value=%l>
-<input type=hidden name=anon value=%a>
+<input type=hidden name=lang value="%l">
+<input type=hidden name=anon value="%a">
 
 <p>
 <ul><li>
@@ -689,8 +689,8 @@ it: Domanda d'indicare gli aggiornamenti nella pagina di benvenuto
 
 <tr align=left>
 <td align=center>
-<input type=radio name=history value=yes%Chistory=yes;>[yes/no]0
-<input type=radio name=history value=no%Chistory=no;>[yes/no]1
+<input type=radio name=history value="yes"%Chistory=yes;>[yes/no]0
+<input type=radio name=history value="no"%Chistory=no;>[yes/no]1
 </tr>
 </table>
 
@@ -798,9 +798,9 @@ it: La richiesta avanzata permette di fare delle ricerche sulla
 <tr align=left>
 <td align=center>
 <input type=radio name=hide_advanced_request
-value=yes%Chide_advanced_request=yes;>[yes/no]0
+value="yes"%Chide_advanced_request=yes;>[yes/no]0
 <input type=radio name=hide_advanced_request
-value=no%Chide_advanced_request=no;>[yes/no]1
+value="no"%Chide_advanced_request=no;>[yes/no]1
 </tr>
 </table>
 
@@ -1012,9 +1012,9 @@ sv: Detta kan vara användbart, temporärt, när du gör en upprensning av din
 <tr align=left>
 <td align=center>
 <input type=radio name=wizard_just_friend
- value=yes%Cwizard_just_friend=yes;>[yes/no]0
+ value="yes"%Cwizard_just_friend=yes;>[yes/no]0
 <input type=radio name=wizard_just_friend
- value=no%Cwizard_just_friend=no;>[yes/no]1
+ value="no"%Cwizard_just_friend=no;>[yes/no]1
 
 </td>
 </tr>
@@ -1053,9 +1053,9 @@ it: Nasconde i nomi delle persone private, ovvero le persone in vita
 <tr align=left>
 <td align=center>
 <input type=radio name=hide_private_names
- value=yes%Chide_private_names=yes;>[yes/no]0
+ value="yes"%Chide_private_names=yes;>[yes/no]0
 <input type=radio name=hide_private_names
- value=no%Chide_private_names=no;>[yes/no]1
+ value="no"%Chide_private_names=no;>[yes/no]1
 
 </td>
 </tr>
@@ -1127,9 +1127,9 @@ sv: Det kan vara användbart lokalt, när man vill sätta in en bild av någon,
 <tr align=left>
 <td align=center>
 <input type=radio name=can_send_image
- value=yes%Ccan_send_image=yes;>[yes/no]0
+ value="yes"%Ccan_send_image=yes;>[yes/no]0
 <input type=radio name=can_send_image
- value=no%Ccan_send_image=no;>[yes/no]1
+ value="no"%Ccan_send_image=no;>[yes/no]1
 
 </td>
 </tr>
