--- a/bin/setup/lang/gwu.htm
+++ b/bin/setup/lang/gwu.htm
@@ -34,8 +34,8 @@ sv: Exportera en GeneWeb källfil
 </div>
 
 <form method=GET action="gwu">
-<input type=hidden name=opt value=check>
-<input type=hidden name=lang value=%l>
+<input type=hidden name=opt value="check">
+<input type=hidden name=lang value="%l">
 
 <ul><li>
 [
@@ -122,7 +122,7 @@ fr: ou demandez à reconstruire les fichiers dans le dossier d'origine.<br>
 </dl>
 </td></tr>
 <tr><td>
-<dl><dt><dd><input type="radio" name="od" value = "odir">&nbsp;<input name=odir size=30 value="." ></dl>
+<dl><dt><dd><input type="radio" name="od" value="odir">&nbsp;<input name=odir size=30 value="." ></dl>
 </td></tr>
 </table>
 </dl>
@@ -143,7 +143,7 @@ sv: Välj de optioner du vill ha:
 
 <table class="setup">
 <tr align=left>
-<td><input type=checkbox name=mem value=on>   </td>
+<td><input type=checkbox name=mem value="on">   </td>
 <td>[
 de: Während der Operation sparsam mit dem Speicher umgehen
     (ist aber langsamer).
