--- a/bin/setup/lang/recover.htm
+++ b/bin/setup/lang/recover.htm
@@ -38,7 +38,7 @@ sv: Återskapa en databas
 <p>
 
 <form method=GET action="recover">
-<input type=hidden name=lang value=%l>
+<input type=hidden name=lang value="%l">
 
 [
 de: Gib den vollständigen Namen des <em>Verzeichnisses</em> an, in dem
