--- a/bin/setup/lang/recover1.htm
+++ b/bin/setup/lang/recover1.htm
@@ -63,7 +63,7 @@ sv: Välj den databas du vill återskapa:
 <p>
 
 <form method=GET action="recover_1">
-<input type=hidden name=lang value=%l>
+<input type=hidden name=lang value="%l">
 <input type=hidden name=anon value="%a">
 
 <dl><dt><dd><table style="border:1px solid">
@@ -122,7 +122,7 @@ sv: Du kan välja en option:
 
 <dl><dt><dd><table style="border:1px solid">
 
-<tr><td><input type=checkbox name=ged value=on>   </td>
+<tr><td><input type=checkbox name=ged value="on">   </td>
 <td>[
 de: Mittels GEDCOM-Datei übernehmen. A priori wird dies nicht
     empfohlen, jedoch solltest du diese Variante versuchen, wenn
