--- a/bin/setup/lang/rename.htm
+++ b/bin/setup/lang/rename.htm
@@ -36,7 +36,7 @@ sv: Döpa om
 </div>
 
 <form method=POST action="rename">
-<input type=hidden name=lang value=%l>
+<input type=hidden name=lang value="%l">
 <ul><li>
 [
 de: Ändere die Namen wie gewünscht:
