--- a/bin/setup/lang/welcome.htm
+++ b/bin/setup/lang/welcome.htm
@@ -353,13 +353,13 @@ de: Du kannst auch auf die komplette
     <font color=#2f6400><b>GeneWeb</b></font>-<a
     href="http://geneweb.tuxfamily.org/wiki/GeneWeb" target="_blank">Dokumentation</a> zugreifen.
 en: You can also consult the complete <a 
-    href="http://geneweb.tuxfamily.org/wiki/GeneWeb" target="_blank">documentation</a> of <font
+    href="http://geneweb.tuxfamily.org/wiki/gwsetup" target="_blank">documentation</a> of <font
     color=#2f6400><b>GeneWeb</b></font>.
 es: Ud puede igualmente consultar la <a
     href="http://geneweb.tuxfamily.org/wiki/GeneWeb" target="_blank">documentación</a> completa de
     <font color=#2f6400><b>GeneWeb</b></font>.
 fr: Vous pouvez également consulter la <a
-    href="http://geneweb.tuxfamily.org/wiki/GeneWeb" target="_blank">documentation</a> complète de
+    href="http://geneweb.tuxfamily.org/wiki/gwsetup/fr" target="_blank">documentation</a> complète de
     <b><font color=#2f6400>GeneWeb</font></b>.
 it: Potete anche consultare la <a
     href="http://geneweb.tuxfamily.org/wiki/GeneWeb" target="_blank">documentazione</a> completa di
