Missing quotes for html attributes in setup/lang/*.htm files

--- a/bin/setup/lang/gwb2ged.htm
+++ b/bin/setup/lang/gwb2ged.htm
@@ -138,7 +138,7 @@ sv: Koda tecknen i ASCII.
 </tr>
 
 <tr align="left"><td>
-<input type="radio" name="charset" value="UTF-8" id="UTF-8" checked="checked">   
+<input type="radio" name="charset" value="UTF-8" id="UTF-8" checked>   
 <label for="UTF-8">[
 de: Kodiere die Zeichen in UTF-8.
 en: Encode the characters in UTF-8.
@@ -180,7 +180,7 @@ sv: Koda tecknen i ANSI (ISO 8859-1).
 <p>
 <table class="setup">
 <tr align=left>
-<td><input type=checkbox name=mem value=on id=mem>   
+<td><input type=checkbox name=mem value="on" id=mem>   
 <label for=mem>-mem</label>[
 de: : während der Operation sparsam mit dem Speicher umgehen
     (ist aber langsamer).
@@ -199,7 +199,7 @@ sv: : spara minne under operationen (men det kommer att gå saktare).
 <p>
 <table class="setup">
 <tr align=left>
-<td><input type=checkbox name=nn id=nn value=on>   
+<td><input type=checkbox name=nn id=nn value="on">   
 <label for=nn>-nn</label>[
 en: : Do not extract notes.
 fr:  : ne pas extraire les notes.
@@ -209,7 +209,7 @@ fr:  : ne pas extraire les notes.
 <p>
 <table class="setup">
 <tr align=left>
-<td><input type=checkbox name=nopicture id=nopicture value=on>   
+<td><input type=checkbox name=nopicture id=nopicture value="on">   
 <label for=nopicture>-nopicture</label>[
 en: : Dont extract individual pictures (portraits).
 fr:  : ne pas extraire les images individuelles (portraits).
@@ -219,7 +219,7 @@ fr:  : ne pas extraire les images individuelles (portraits).
 <p>
 <table class="setup">
 <tr align=left>
-<td><input type=checkbox name=picture-path id=picture-path value=on>   
+<td><input type=checkbox name=picture-path id=picture-path value="on">   
 <label for=picture-path>-picture-path</label>[
 en: : Extract individual pictures path (portraits).
 fr:  : extraire le chemin des images individuelles (portraits).
@@ -445,7 +445,7 @@ fr: Années
 <p>
 <table class="setup">
 <tr align=left>
-<td><input type=checkbox name=nsp id=nsp value=on>   
+<td><input type=checkbox name=nsp id=nsp value="on">   
 <label for=nsp>-nsp</label>[
 en: : Do not extract spouses' parents (for options -s and -d).
 fr:  : ne pas extraire les parents des époux (pour les options -s et -d).
