--- a/bin/setup/lang/merge.htm
+++ b/bin/setup/lang/merge.htm
@@ -30,7 +30,7 @@ sv: Sammanslagning av databaser
 </div>
 
 <form method=GET action="merge">
-<input type=hidden name=lang value=%l>
+<input type=hidden name=lang value="%l">
 
 [
 de: Alle Datenbanken, die zusammengeführt werden sollen,
