Remove leading space in languages and charset in gwsetup lexicon

--- a/bin/setup/lang/merge.htm
+++ b/bin/setup/lang/merge.htm
@@ -2,6 +2,7 @@
 <head>
   <!-- Copyright (c) 1998-2006 INRIA - GeneWeb -->
   <!-- $Id: merge.htm,v 7.00 2018-04-20 05:35:06 ddr Exp $ -->
+  <meta charset="utf-8">
   <meta name="robots" content="none">
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
